# ejpipeline

./: .gitignore  README.md  config.py  metadata-edgi.toml  pyproject.toml  settings.toml
data_pipeline/: cli.py  config.py  utils.py
data_pipeline/etl/: base.py
data_pipeline/etl/calenviroscreen/: etl.py
data_pipeline/etl/cdc_eji_data/: etl.py
data_pipeline/etl/cdc_life_expectancy/: etl.py
data_pipeline/etl/cdc_places/: etl.py
data_pipeline/etl/cdc_svi_index/: etl.py
data_pipeline/etl/census/: etl.py
data_pipeline/etl/child_opportunity_index/: etl.py
data_pipeline/etl/epa_air_tox_screen/: etl.py
data_pipeline/etl/epa_air_tox_screen_list/: etl.py
data_pipeline/etl/epa_ejscreen_data/: etl.py
data_pipeline/etl/epa_tri_basic_plus/: etl.py
script/: create_etl_template.py
tests/: test_pytest.py
